# flask-blog-personal

./: .env  Dockerfile  curl-test.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  redeploy-site.sh  run_test.sh
.github/workflows/: deploy.yml  test.yml
app/: __init__.py  fetch.py
app/static/: submit_form.js
app/static/styles/: global.css  map.css  transitions.css
app/templates/: layouts.html
app/templates/pages/: .timeline.html.swo  errorpage.html  home.html  timeline.html
app/templates/partials/: avatar.html  footer.html  map.html  nav.html
tests/: test_app.py  test_db.py
user_conf.d/: myportfolio.conf
